# allegro_vivace

./: CMakeLists.txt  vcpkg-configuration.json
basics/: main.cpp
